# dcass3

./: .gitignore  CMakeLists.txt  TODO.md
include/dcass3/: filesegmentation.h
source/dcass3/: filesegmentation.cpp  main.cpp
